[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://src/ui/parameter_panel.gd" id="1_panel"]

[node name="ParameterPanel" type="PanelContainer"]
script = ExtResource("1_panel")
anchors_preset = 3
anchor_left = 1.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -220.0
offset_top = 52.0
offset_bottom = -96.0
grow_horizontal = 0
grow_vertical = 2
custom_minimum_size = Vector2(200, 0)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="TitleLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Component"
horizontal_alignment = 1
theme_override_font_sizes/font_size = 14

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ParamContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="DeleteButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Delete"
